feat(task main):add tab and tab set

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -6,3 +6,11 @@ $purple__light: #826a96;
 $orange: #e98d7c;
 $white: #f5f5f5;
 $black: #4d5052;
+$purple--hv: #563d6e99;
+$green--hv: #3dc26a99;
+$bg--hv: #e7eaee99;
+$blue--hv: #5ecbdc99;
+$purple__light--hv: #826a9699;
+$orange--hv: #e98d7c99;
+$white--hv: #f5f5f599;
+$black--hv: #4d505299;
